--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=3303
 HOST="http://192.168.1.39:3303"
 FRONTEND_HOST="http://192.168.1.18:3000"
 
-CURRENCY_LIST = ["XAF", "XOF", "USD", "EUR", "NGN"]
+CURRENCY_LIST = ["XAF", "XOF", "USD", "EUR", "NGN", "INR"]
 
 DB_CONNECTION="mongodb://127.0.0.1:27017/v1?retryWrites=true&w=majority"
 # mongodb://127.0.0.1:27017/v1?retryWrites=true&w=majority
