--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3303
-HOST="http://192.168.1.39:3303"
-FRONTEND_HOST="http://192.168.1.18:3000"
+HOST="http://192.168.1.19:3303"
+FRONTEND_HOST="http://192.168.1.19:3000"
 
 CURRENCY_LIST = ["XAF", "XOF", "USD", "EUR", "NGN", "INR"]
 
@@ -13,4 +13,4 @@ EMAIL_PORT=587
 EMAIL_SECURE=false # true for 587, false for other ports
 EMAIL_TLS=true
 EMAIL_USER="kotai.workalert@gmail.com"
-EMAIL_PASSWORD ="tnnzqsjryiizdncp"
+EMAIL_PASSWORD ="hldatodtwmxjqhaf"
