--- a/.env
+++ b/.env
@@ -2,9 +2,11 @@ PORT=3303
 HOST="http://192.168.1.19:3303"
 FRONTEND_HOST="http://192.168.1.19:3000"
 
-CURRENCY_LIST = ["XAF", "XOF", "USD", "EUR", "NGN", "INR"]
+CURRENCY_LIST=["XAF", "XOF", "USD", "EUR", "NGN", "INR"]
 
-DB_CONNECTION="mongodb://127.0.0.1:27017/v1?retryWrites=true&w=majority"
+# DB_CONNECTION="mongodb://127.0.0.1:27017/v1?retryWrites=true&w=majority"
+DB_CONNECTION="mongodb+srv://lottery_kotai:lottery_kotai@clusta_kotaier0.4s3metn.mongodb.net/?retryWrites=true&w=majority"
+
 # mongodb://127.0.0.1:27017/v1?retryWrites=true&w=majority
 
 # Email Config
@@ -13,4 +15,4 @@ EMAIL_PORT=587
 EMAIL_SECURE=false # true for 587, false for other ports
 EMAIL_TLS=true
 EMAIL_USER="kotai.workalert@gmail.com"
-EMAIL_PASSWORD ="hldatodtwmxjqhaf"
+EMAIL_PASSWORD="hldatodtwmxjqhaf"
