--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3303
-HOST="http://192.168.1.19:3303"
+HOST="http://localhost:3303"
 FRONTEND_HOST="http://0.0.0.0:3000"
 
 CURRENCY_LIST=["XAF", "XOF", "USD", "EUR", "NGN", "INR"]
