--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3303
-HOST="http://192.168.1.19:3303"
+HOST="http://192.168.1.14:3303"
 FRONTEND_HOST="http://0.0.0.0:3000"
 
 CURRENCY_LIST=["XAF", "XOF", "USD", "EUR", "NGN", "INR"]
@@ -17,3 +17,7 @@ EMAIL_SECURE=false # true for 587, false for other ports
 EMAIL_TLS=true
 EMAIL_USER="kotai.workalert@gmail.com"
 EMAIL_PASSWORD="hldatodtwmxjqhaf"
+
+TWILIO_SID='ACa92ba8aa3f79a54d165f9637c7a5ae00'
+TWILIO_TOKEN='dab489dfaf2addef785a17b780d8b075'
+TWILIO_NUMBER='+14434999766'
