--- a/vhost.conf
+++ b/vhost.conf
@@ -5,11 +5,11 @@
 # </VirtualHost>
 
 <VirtualHost *:80>
-    DocumentRoot "/home/bitnami/server"
-    ServerName 65.2.33.44/admin
+    # DocumentRoot "/home/bitnami/server"
+    ServerName 65.2.33.44
 
-    ProxyPass / http://localhost:3303/
-    ProxyPassReverse / http://localhost:3303/
+    # ProxyPass / http://localhost:3000/
+    # ProxyPassReverse / http://localhost:3000/
     # Other directives here
 </VirtualHost>
 
