--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsdom": "^21.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.1",
     "mongoose-unique-validator": "^3.1.0",
@@ -25,6 +26,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
-    "os-utils": "^0.0.14"
+    "os-utils": "^0.0.14",
+    "play-sound": "^1.1.5",
+    "twilio": "^4.8.0"
   }
 }
