--- a/.env
+++ b/.env
@@ -5,11 +5,11 @@ FRONTEND_HOST="http://0.0.0.0:3000"
 CURRENCY_LIST=["XAF", "XOF", "USD", "EUR", "NGN", "INR"]
 
 
-# DB_CONNECTION="mongodb://127.0.0.1:27017/v1?retryWrites=true&w=majority"
+DB_CONNECTION="mongodb://127.0.0.1:27017/v1?retryWrites=true&w=majority"
 # DB_CONNECTION="mongodb+srv://lottery_kotai:lottery_kotai@clusta_kotaier0.4s3metn.mongodb.net/?retryWrites=true&w=majority"
 # DB_CONNECTION="mongodb+srv://satya_kotai:I583oTBPZaOJrzQG@cluster0.4s3metn.mongodb.net/test"
 # mongodb://127.0.0.1:27017/v1?retryWrites=true&w=majority
-DB_CONNECTION="mongodb+srv://lottery_kotai:lottery_kotai@clusta_kotaier0.4s3metn.mongodb.net/v1?retryWrites=true&w=majority"
+# DB_CONNECTION="mongodb+srv://lottery_kotai:lottery_kotai@clusta_kotaier0.4s3metn.mongodb.net/v1?retryWrites=true&w=majority"
 # Email Config
 
 EMAIL_HOST="smtp.gmail.com"
